css/main.css
html {
  background-color: #eee9de;
  font-family: "Lato", sans-serif;
  line-height: 1.5;
  box-sizing: border-box;
}

div img {
  padding: 1em 2em;
  vertical-align: middle;

}

h2 {
  margin: 1.5rem;
  text-align: center;
}

p {
  font-weight: bold;
  display: inline-block;
  text-align: left;
  margin: 1.5rem;
}

div a {
  color: #333;
  font-weight: normal;
  font-family: "Lato", sans-serif;
  text-decoration: none;
  display: inline-block;
  margin: 1.5rem;
  max-width: 20em;
  padding: .4em .5em .75em;
  background-color: #eee9de;
  border-radius: 10px;
  text-align: left;
}

a:hover {
  background-color: #666;
}

